# graphics101-airbrush

./: .gitignore  CMakeLists-zip.txt  CMakeLists.txt  README.md  airbrush.cpp  airbrush.h  airbrush.pro  canvaswidget.cpp  canvaswidget.h  image.cpp  image.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: airbrush.cpp  airbrush.h  canvaswidget.cpp  main.cpp  main_imgui.cpp  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt  complete_test.cpp  complete_test_solution.cpp  create_test.cpp  paint_test.cpp
